test/fail/local-redeclare.rnp
let a = 1;
let a = 1;
---
 --> fail/local-redeclare.rnp:2:5
  |
2 | let a = 1;
  |     ^ Cannot shadow or redeclare a
  |
